feat: add other policies in CEL expressions - Part 4 (#964)
* add CI test for other-cel re(c-q) directories

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy require-annotations

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* add kyverno tests for require-annotations

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert require-annotations to cel

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy require-deployments-have-multiple-replicas

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* add fail kyverno tests for require-deployments-have-multiple-replica

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert require-deployments-have-multiple-replicas to cel

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy require-image-checksum

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert require-image-checksum to cel

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy require-ingress-https

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* add kyverno tests for require-ingress-https

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert require-ingress-https to cel

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy require-pod-priorityclassname

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert require-pod-priorityclassname to cel

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy require-qos-burstable

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert require-qos-burstable to cel

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy require-storageclass

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert require-storageclass to cel

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* rename files for clarity

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* add a new line at the end of files

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,6 +55,7 @@ jobs:
           - ^other$/^[m-q]
           - ^other-cel$/^[m-q]
           - ^other$/^re[c-q]
+          - ^other-cel$/^re[c-q]
           - ^other$/^res
           - ^other$/^[s-z]
           - ^pod-security$
