--- a/best-practices-cel/require-drop-cap-net-raw/.chainsaw-test/chainsaw-test.yaml
+++ b/best-practices-cel/require-drop-cap-net-raw/.chainsaw-test/chainsaw-test.yaml
@@ -5,6 +5,8 @@ metadata:
   creationTimestamp: null
   name: require-drop-cap-net-raw
 spec:
+  # disable templating because it can cause issues with CEL expressions
+  template: false
   steps:
   - name: step-01
     try:
