--- a/best-practices-cel/restrict-image-registries/.chainsaw-test/chainsaw-test.yaml
+++ b/best-practices-cel/restrict-image-registries/.chainsaw-test/chainsaw-test.yaml
@@ -5,6 +5,8 @@ metadata:
   creationTimestamp: null
   name: restrict-image-registries
 spec:
+  # disable templating because it can cause issues with CEL expressions
+  template: false
   steps:
   - name: step-01
     try:
