--- a/other-cel/require-non-root-groups/.chainsaw-test/chainsaw-test.yaml
+++ b/other-cel/require-non-root-groups/.chainsaw-test/chainsaw-test.yaml
@@ -5,6 +5,8 @@ metadata:
   creationTimestamp: null
   name: require-non-root-groups
 spec:
+  # disable templating because it can cause issues with CEL expressions
+  template: false
   steps:
   - name: step-01
     try:
