--- a/other/resource-creation-updation-denied/.chainsaw-test/resource.yaml
+++ b/other/resource-creation-updation-denied/.chainsaw-test/resource.yaml
@@ -1,7 +1,6 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  creationTimestamp: null
   labels:
     app: httpd
   name: httpd
@@ -13,12 +12,10 @@ spec:
   strategy: {}
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app: httpd
     spec:
+      terminationGracePeriodSeconds: 5
       containers:
       - image: httpd
         name: httpd
-        resources: {}
-status: {}
