--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,7 @@ jobs:
           - ^best-practices$
           - ^castai$
           - ^cert-manager$
+          - ^cleanup$
           - ^consul$
           - ^external-secret-operator$
           - ^flux$
