added windows-pod-security directory to test.yaml in workflows
Signed-off-by: Anudeep Nalla <anudeep.nalla@nirmata.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,6 +65,7 @@ jobs:
           # - ^tekton
           # - ^traefik
           # - ^velero
+          - ^windows-pod-security$
     runs-on: ubuntu-latest
     name: ${{ matrix.k8s-version.name }} - ${{ matrix.tests }}
     steps:
