changed updation to updating
Signed-off-by: Anudeep Nalla <anudeep.nalla@nirmata.com>

--- a/other/resource-creation-updating-denied/.chainsaw-test/policy-assert.yaml
+++ b/other/resource-creation-updating-denied/.chainsaw-test/policy-assert.yaml
@@ -1,9 +1,9 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: resource-creation-updation-denied
+  name: resource-creation-updating-denied
 spec:
-  validationFailureAction: Enforce
+  validationFailureAction: Audit
 status:
   conditions:
   - reason: Succeeded
