--- a/other/resource-creation-updating-denied/resource-creation-updating-denied.yaml
+++ b/other/resource-creation-updating-denied/resource-creation-updating-denied.yaml
@@ -1,9 +1,9 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: resource-creation-updation-denied
+  name: resource-creation-updating-denied
   annotations:
-    policies.kyverno.io/title: Deny Creation and Updation of Resources
+    policies.kyverno.io/title: Deny Creation and Updating of Resources
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
     kyverno.io/kyverno-version: 1.11.1
@@ -19,7 +19,7 @@ spec:
   validationFailureAction: Audit
   background: false
   rules:
-  - name: deny-creation-updation-of-resources
+  - name: deny-creation-updating-of-resources
     match:
       any:
       - resources:
