feat: add other policies in CEL expressions - Part 5 (#968)
* add CI test for directories starting with res in other-cel

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy restrict-annotations

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert restrict-annotations to cel

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* rename wrong pod names and annotation key

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy restrict-binding-clusteradmin

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* add kyverno tests for restrict-binding-clusteradmin

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert restrict-binding-clusteradmin to cel

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy restrict-binding-system-groups

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* add kyverno tests for restrict-binding-system-groups

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* fix kind in chainsaw test resource

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert restrict-binding-system-groups to cel

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy restrict-clusterrole-nodesproxy

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* add kyverno tests for restrict-clusterrole-nodesproxy

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert restrict-clusterrole-nodesproxy

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy restrict-controlplane-scheduling

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* add test resources for restrict-controlplane-scheduling

Also renamed pods for clarity

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert restrict-controlplane-scheduling

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy restrict-deprecated-registry

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert restrict-deprecated-registry

Signed-off-by: Chandan-DK <chandandk46

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,6 +58,7 @@ jobs:
           - ^other$/^re[c-q]
           - ^other-cel$/^re[c-q]
           - ^other$/^res
+          - ^other-cel$/^res
           - ^other$/^[s-z]
           - ^pod-security$
           - ^pod-security-cel$
