--- a/other-cel/restrict-secrets-by-name/.chainsaw-test/chainsaw-test.yaml
+++ b/other-cel/restrict-secrets-by-name/.chainsaw-test/chainsaw-test.yaml
@@ -5,6 +5,8 @@ metadata:
   creationTimestamp: null
   name: restrict-secrets-by-name
 spec:
+  # disable templating because it can cause issues with CEL expressions
+  template: false
   steps:
   - name: step-01
     try:
