add test case for pod creation without securityContext field
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-usergroup-fsgroup-id/.kyverno-test/resource.yaml
+++ b/other-cel/restrict-usergroup-fsgroup-id/.kyverno-test/resource.yaml
@@ -57,4 +57,16 @@ spec:
   containers:
   - name: busy
     image: busybox
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod04
+  labels:
+    app: myapp
+spec:
+  securityContext: {}
+  containers:
+  - name: busy
+    image: busybox
 
