--- a/other-cel/restrict-usergroup-fsgroup-id/.chainsaw-test/pod-bad.yaml
+++ b/other-cel/restrict-usergroup-fsgroup-id/.chainsaw-test/pod-bad.yaml
@@ -51,4 +51,14 @@ spec:
       image: busybox:1.35
     - name: busybox02
       image: busybox:1.35
-
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod05
+spec:
+  containers:
+    - name: busybox
+      image: busybox:1.35
+    - name: busybox02
+      image: busybox:1.35
