--- a/other-cel/restrict-usergroup-fsgroup-id/.chainsaw-test/podcontroller-bad.yaml
+++ b/other-cel/restrict-usergroup-fsgroup-id/.chainsaw-test/podcontroller-bad.yaml
@@ -25,6 +25,29 @@ spec:
       - name: busybox02
         image: busybox:1.35
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: busybox
+  name: baddeployment02
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: busybox
+  strategy: {}
+  template:
+    metadata:
+      labels:
+        app: busybox
+    spec:
+      containers:
+      - name: busybox
+        image: busybox:1.35
+      - name: busybox02
+        image: busybox:1.35
+---
 apiVersion: batch/v1
 kind: CronJob
 metadata:
@@ -39,6 +62,23 @@ spec:
             runAsUser: 2000
             runAsGroup: 1000
             fsGroup: 3000
+          containers:
+          - name: busybox
+            image: busybox:1.35
+          - name: busybox02
+            image: busybox:1.35
+          restartPolicy: OnFailure
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: badcronjob02
+spec:
+  schedule: "* * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
           containers:
           - name: busybox
             image: busybox:1.35
