handle case where rules is null in restrict-wildcard-verbs
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-wildcard-verbs/restrict-wildcard-verbs.yaml
+++ b/other-cel/restrict-wildcard-verbs/restrict-wildcard-verbs.yaml
@@ -30,6 +30,6 @@ spec:
       validate:
         cel:
           expressions:
-            - expression: "!object.rules.exists(rule, '*' in rule.verbs)"
+            - expression: "object.rules == null || !object.rules.exists(rule, '*' in rule.verbs)"
               message: "Use of a wildcard ('*') in any verbs is forbidden."
 
