--- a/other-cel/restrict-wildcard-verbs/.chainsaw-test/cr-good.yaml
+++ b/other-cel/restrict-wildcard-verbs/.chainsaw-test/cr-good.yaml
@@ -36,4 +36,16 @@ rules:
 - apiGroups: ["apps"]
   resources: ["*"]
   verbs: ["create", "update", "patch"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: empty-rules
+rules: 
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: omitted-rules
+---
 
