--- a/other-cel/restrict-wildcard-verbs/.chainsaw-test/role-good.yaml
+++ b/other-cel/restrict-wildcard-verbs/.chainsaw-test/role-good.yaml
@@ -36,4 +36,15 @@ rules:
 - apiGroups: ["apps"]
   resources: ["*"]
   verbs: ["create", "update", "patch"]
-
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: omitted-rules
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: empty-rules
+rules: 
+---
