handle case where rules is null for restrict-wildcard-resources
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-wildcard-resources/restrict-wildcard-resources.yaml
+++ b/other-cel/restrict-wildcard-resources/restrict-wildcard-resources.yaml
@@ -30,6 +30,6 @@ spec:
       validate:
         cel:
           expressions:
-            - expression: "!object.rules.exists(rule, '*' in rule.resources)"
+            - expression: "object.rules == null || !object.rules.exists(rule, '*' in rule.resources)"
               message: "Use of a wildcard ('*') in any resources is forbidden."
 
