--- a/other-cel/restrict-wildcard-resources/.chainsaw-test/role-good.yaml
+++ b/other-cel/restrict-wildcard-resources/.chainsaw-test/role-good.yaml
@@ -45,4 +45,15 @@ rules:
 - apiGroups: ["*"]
   resources: ["secrets"]
   verbs: ["create", "update", "patch"]
-
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: omitted-rules
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: empty-rules
+rules: 
+---
