handle case where rules is null for restrict-clusterrole-nodesproxy
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-clusterrole-nodesproxy/restrict-clusterrole-nodesproxy.yaml
+++ b/other-cel/restrict-clusterrole-nodesproxy/restrict-clusterrole-nodesproxy.yaml
@@ -31,6 +31,7 @@ spec:
         cel:
           expressions:
             - expression: >-
+                object.rules == null || 
                 !object.rules.exists(rule, 
                 rule.resources.exists(resource, resource == 'nodes/proxy') && 
                 rule.apiGroups.exists(apiGroup, apiGroup == ''))
