add chainsaw edge cases for restrict-clusterrole-nodesproxy
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-clusterrole-nodesproxy/.chainsaw-test/cr-good.yaml
+++ b/other-cel/restrict-clusterrole-nodesproxy/.chainsaw-test/cr-good.yaml
@@ -18,4 +18,15 @@ rules:
 - apiGroups: [""]
   resources: ["nodes"]
   verbs: ["get", "watch", "list"]
-
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: empty-rules
+rules: 
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: omitted-rules
+---
