handle case where rules is null in restrict-escalation-verbs-roles
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-escalation-verbs-roles/restrict-escalation-verbs-roles.yaml
+++ b/other-cel/restrict-escalation-verbs-roles/restrict-escalation-verbs-roles.yaml
@@ -36,6 +36,7 @@ spec:
               expression: "['*', 'bind', 'escalate', 'impersonate']"
           expressions:
             - expression: >-
+                object.rules == null || 
                 !object.rules.exists(rule,
                 rule.apiGroups.exists(apiGroup, apiGroup in variables.apiGroups) &&
                 rule.resources.exists(resource, resource in variables.resources) &&
