add edge case for kyverno tests in restrict-escalation-verbs-roles
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-escalation-verbs-roles/.kyverno-test/kyverno-test.yaml
+++ b/other-cel/restrict-escalation-verbs-roles/.kyverno-test/kyverno-test.yaml
@@ -25,12 +25,14 @@ results:
   resources:
   - goodclusterrole01
   - goodclusterrole02
+  - default-rules
   result: pass
   rule: escalate
 - kind: Role
   policy: restrict-escalation-verbs-roles
   resources:
   - goodrole01
+  - default-rules
   result: pass
   rule: escalate
 
