--- a/other-cel/restrict-escalation-verbs-roles/.kyverno-test/resource.yaml
+++ b/other-cel/restrict-escalation-verbs-roles/.kyverno-test/resource.yaml
@@ -101,6 +101,14 @@ rules:
   verbs:
   - '*'
 ---
+# If the 'rules' field is not specified or is specified as 'rules: ' without a value, 
+# it will be set to null by default
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: default-rules
+rules: null
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -126,4 +134,12 @@ rules:
   - roles
   verbs:
   - impersonate
-
+---
+# If the 'rules' field is not specified or is specified as 'rules: ' without a value, 
+# it will be set to null by default
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: default-rules
+rules: null
+---
