--- a/other-cel/restrict-escalation-verbs-roles/.chainsaw-test/role-good.yaml
+++ b/other-cel/restrict-escalation-verbs-roles/.chainsaw-test/role-good.yaml
@@ -21,4 +21,15 @@ rules:
 - apiGroups: [""]
   resources: ["pods", "namespaces"]
   verbs: ["get", "watch", "list"]
-
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: empty-rules
+rules: 
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: omitted-rules
+---
