handle case where rules is null in restrict-secret-role-verbs
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-secret-role-verbs/restrict-secret-role-verbs.yaml
+++ b/other-cel/restrict-secret-role-verbs/restrict-secret-role-verbs.yaml
@@ -35,6 +35,7 @@ spec:
               expression: "['get','list','watch']"
           expressions:
             - expression: >-
+                object.rules == null || 
                 !object.rules.exists(rule, 
                 'secrets' in rule.resources && rule.verbs.exists(verb, verb in variables.forbiddenVerbs))
               message: "Requesting verbs `get`, `list`, or `watch` on Secrets is forbidden."
