add edge cases for restrict-secret-role-verbs
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-secret-role-verbs/.kyverno-test/kyverno-test.yaml
+++ b/other-cel/restrict-secret-role-verbs/.kyverno-test/kyverno-test.yaml
@@ -5,10 +5,7 @@ metadata:
 policies:
 - ../restrict-secret-role-verbs.yaml
 resources:
-- ../.chainsaw-test/cr-bad.yaml
-- ../.chainsaw-test/cr-good.yaml
-- ../.chainsaw-test/role-bad.yaml
-- ../.chainsaw-test/role-good.yaml
+- resource.yaml
 results:
 - kind: ClusterRole
   policy: restrict-secret-role-verbs
@@ -24,22 +21,24 @@ results:
   - goodcr01
   - goodcr02
   - goodcr03
+  - default-rules
   result: pass
   rule: secret-verbs
 - kind: Role
   policy: restrict-secret-role-verbs
   resources:
-  - badcr01
-  - badcr02
-  - badcr03
+  - badrole01
+  - badrole02
+  - badrole03
   result: fail
   rule: secret-verbs
 - kind: Role
   policy: restrict-secret-role-verbs
   resources:
-  - goodcr01
-  - goodcr02
-  - goodcr03
+  - goodrole01
+  - goodrole02
+  - goodrole03
+  - default-rules
   result: pass
   rule: secret-verbs
 
