--- a/other-cel/restrict-wildcard-resources/.kyverno-test/kyverno-test.yaml
+++ b/other-cel/restrict-wildcard-resources/.kyverno-test/kyverno-test.yaml
@@ -30,19 +30,19 @@ results:
   rule: wildcard-resources
   kind: Role
   resources:
-  - badcr01
-  - badcr02
-  - badcr03
+  - badrole01
+  - badrole02
+  - badrole03
   result: fail
 - policy: restrict-wildcard-resources
   rule: wildcard-resources
   kind: Role
   resources:
-  - goodcr01
-  - goodcr02
-  - goodcr03
-  - goodcr04
-  - goodcr05
+  - goodrole01
+  - goodrole02
+  - goodrole03
+  - goodrole04
+  - goodrole05
   - default-rules
   result: pass
 
