--- a/other-cel/restrict-clusterrole-nodesproxy/.kyverno-test/resource.yaml
+++ b/other-cel/restrict-clusterrole-nodesproxy/.kyverno-test/resource.yaml
@@ -40,8 +40,8 @@ rules:
   resources: ["nodes"]
   verbs: ["get", "watch", "list"]
 ---
-# If the 'rules' field is not specified or is specified as 'rules: ' without a value, 
-# it will be set to null by default
+# In the manifest, if the 'rules' field is not specified or is specified as 'rules: ' without a value, 
+# it will be set to null by default when created in the cluster
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
