--- a/other-cel/restrict-wildcard-resources/.kyverno-test/resource.yaml
+++ b/other-cel/restrict-wildcard-resources/.kyverno-test/resource.yaml
@@ -79,8 +79,8 @@ rules:
   resources: ["secrets"]
   verbs: ["create", "update", "patch"]
 ---
-# If the 'rules' field is not specified or is specified as 'rules: ' without a value, 
-# it will be set to null by default
+# In the manifest, if the 'rules' field is not specified or is specified as 'rules: ' without a value, 
+# it will be set to null by default when created in the cluster
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -168,8 +168,8 @@ rules:
   resources: ["secrets"]
   verbs: ["create", "update", "patch"]
 ---
-# If the 'rules' field is not specified or is specified as 'rules: ' without a value, 
-# it will be set to null by default
+# In the manifest, if the 'rules' field is not specified or is specified as 'rules: ' without a value, 
+# it will be set to null by default when created in the cluster
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
