--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,8 @@ jobs:
   artifacthub-lint:
     runs-on: ubuntu-latest
     container:
-      image: artifacthub/ah:latest
+      image: artifacthub/ah
+      options: --user root
     steps:
       - name: Checkout code
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
