--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,19 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  artifacthub-lint:
+    runs-on: ubuntu-latest
+    container:
+      image: artifacthub/ah
+      options: --user root
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
+        with:
+          path: policies
+      - name: Run ah lint
+        working-directory: .
+        run: ah lint -k kyverno
   test:
     runs-on: ubuntu-latest
     steps:
