--- a/other-cel/block-pod-exec-by-namespace/block-pod-exec-by-namespace.yaml
+++ b/other-cel/block-pod-exec-by-namespace/block-pod-exec-by-namespace.yaml
@@ -27,6 +27,6 @@ spec:
     validate:
       cel:
         expressions:
-          - expression: "request.namespace != 'pci'"
+          - expression: "namespaceObject.metadata.name != 'pci'"
             message: Pods in this namespace may not be exec'd into.
 
