multi: iterate all container types
In this commit, we ensure policies apply to `ephemeralContainers`,
`initContainers`, and `containers`.

Signed-off-by: Mohamed Awnallah <mohamedmohey2352@gmail.com>

--- a/best-practices/require-probes/require-probes.yaml
+++ b/best-practices/require-probes/require-probes.yaml
@@ -36,7 +36,7 @@ spec:
     validate:
       message: "Liveness, readiness, or startup probes are required for all containers."
       foreach:
-      - list: request.object.spec.containers[]
+      - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
         deny:
           conditions:
             all:
