--- a/karpenter/set-karpenter-non-cpu-limits/set-karpenter-non-cpu-limits.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/set-karpenter-non-cpu-limits.yaml
@@ -25,7 +25,7 @@ spec:
                 - Pod
       mutate:
         foreach:
-          - list: request.object.spec.containers
+          - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
             patchStrategicMerge:
               spec:
                 containers:
@@ -43,7 +43,7 @@ spec:
                 - Pod
       mutate:
         foreach:
-          - list: request.object.spec.containers
+          - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
             patchStrategicMerge:
               spec:
                 containers:
