--- a/other/add-image-as-env-var/add-image-as-env-var.yaml
+++ b/other/add-image-as-env-var/add-image-as-env-var.yaml
@@ -26,7 +26,7 @@ spec:
           - Pod
     mutate:
       foreach:
-      - list: request.object.spec.containers[]
+      - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
         patchesJson6902: |-
           - op: add
             path: /spec/containers/{{elementIndex}}/env/-
