--- a/other/block-images-with-volumes/block-images-with-volumes.yaml
+++ b/other/block-images-with-volumes/block-images-with-volumes.yaml
@@ -32,7 +32,7 @@ spec:
     validate:
       message: "Images containing built-in volumes are prohibited."
       foreach:
-      - list: "request.object.spec.containers"
+      - list: "request.object.spec.[ephemeralContainers, initContainers, containers][]"
         context: 
         - name: imageData
           imageRegistry: 
