--- a/other/inject-env-var-from-image-label/inject-env-var-from-image-label.yaml
+++ b/other/inject-env-var-from-image-label/inject-env-var-from-image-label.yaml
@@ -32,7 +32,7 @@ spec:
         value: DELETE
     mutate:
       foreach:
-      - list: "request.object.spec.containers"
+      - list: "request.object.spec.[ephemeralContainers, initContainers, containers][]"
         context: 
         - name: maintainer
           imageRegistry: 
