--- a/other/require-image-source/require-image-source.yaml
+++ b/other/require-image-source/require-image-source.yaml
@@ -34,7 +34,7 @@ spec:
     validate:
       message: "The image source must be specified in a label or annotation."
       foreach:
-      - list: "request.object.spec.containers"
+      - list: "request.object.spec.[ephemeralContainers, initContainers, containers][]"
         context: 
         - name: imageData
           imageRegistry: 
