--- a/other/require-qos-burstable/require-qos-burstable.yaml
+++ b/other/require-qos-burstable/require-qos-burstable.yaml
@@ -32,7 +32,7 @@ spec:
           all:
           - key: requests
             operator: AnyNotIn
-            value: "{{ request.object.spec.containers[].resources.keys(@)[] }}"
+            value: "{{ request.object.spec.[ephemeralContainers, initContainers, containers][].resources.keys(@)[] }}"
           - key: limits
             operator: AnyNotIn
-            value: "{{ request.object.spec.containers[].resources.keys(@)[] }}"
+            value: "{{ request.object.spec.[ephemeralContainers, initContainers, containers][].resources.keys(@)[] }}"
