--- a/other/add-certificates-volume/add-certificates-volume.yaml
+++ b/other/add-certificates-volume/add-certificates-volume.yaml
@@ -36,7 +36,7 @@ spec:
           - UPDATE
     mutate:
       foreach:
-      - list: "request.object.spec.containers"
+      - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
         patchStrategicMerge:
           spec:
             containers:
