--- a/other/resolve-image-to-digest/resolve-image-to-digest.yaml
+++ b/other/resolve-image-to-digest/resolve-image-to-digest.yaml
@@ -30,7 +30,7 @@ spec:
         value: DELETE
     mutate:
       foreach:
-      - list: "request.object.spec.containers"
+      - list: "request.object.spec.[ephemeralContainers, initContainers, containers][]"
         context:
           - name: resolvedRef
             imageRegistry:
